vnc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vnc-proxy-svc
spec:
  selector:
    app: vnc-proxy
  ports:
  - port: 5900
    targetPort: 5900
    name: vnc
  type: NodePort
